--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -11,11 +11,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.11.5
-    - name: Set pythonpath
-      env:
-        PYTHONPATH: ${{ github.workspace }}
-      run:
-        echo "PYTHONPATH is set to $PYTHONPATH"
+    - name: Set PYTHONPATH
+      run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV && echo "PYTHONPATH is set to ${{ github.workspace }}"
     - name: Install dependencies
       run: |
         ${{ env.pythonLocation }}\python.exe -m pip install --upgrade pip
