--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,6 +20,6 @@ jobs:
         
     - name: Analysing the code with pylint
       run: |
-        $env:PYTHONPATH = ${{ github.workspace }}
+        set $env:PYTHONPATH = ${{ github.workspace }}
         echo "PYTHONPATH IS $env:PYTHONPATH"
         Get-ChildItem -Path $env:PYTHONPATH -Recurse -Filter "*.py" | ForEach-Object { pylint $_.FullName --disable=C --max-line-length=120 --disable=R0913,R0914 }
