--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,24 +4,22 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up Python 3.11.5
       uses: actions/setup-python@v3
       with:
         python-version: 3.11.5
-    - name: Set pythonpath
-      run: |
-        echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
-        echo ${{ github.workspace }}
-    - name: Print pythonpath
-      run: |
-        echo "PYTHONPATH IS $PYTHONPATH"
+        
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        ${{ env.pythonLocation }}/python.exe -m pip install --upgrade pip
+        ${{ env.pythonLocation }}/python.exe -m pip install -r requirements.txt
+        
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py') --disable=C --max-line-length=120 --disable=R0913,R0914
+        $env:PYTHONPATH = "D:\a\real-estate-madrid\real-estate-madrid"
+        echo "PYTHONPATH IS $env:PYTHONPATH"
+        Get-ChildItem -Path $env:PYTHONPATH -Recurse -Filter "*.py" | ForEach-Object { pylint $_.FullName --disable=C --max-line-length=120 --disable=R0913,R0914 }
